# novaconf

./: LICENSE  README.md  pyproject.toml
novaconf/: __init__.py
novaconf/util/: __init__.py  classinfo.py
